Adds eslint, nvmrc and a few more packages. Also adds basic functions to generate CA

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.17.0"
   },
   "keywords": [
