--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "gatsby": "^2.3.33",
     "gatsby-image": "^2.0.40",
+    "gatsby-plugin-lodash": "^3.0.5",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-source-filesystem": "^2.0.32",
     "gatsby-transformer-sharp": "^2.1.18",
+    "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
