--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-jest": "^24.8.0",
