--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
       - run:
           name: Install and configure dependencies
           command: |
+            npm i
             npm install -g --silent gh-pages@2.0.1
             git config user.email "ci-build@vivaldi.ch"
             git config user.name "ci-build"
