--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ workflows:
       - lint:
           requires:
             - pre-build
-      - test
+      - test:
           requires:
             - lint
       - deploy:
